syntax = "proto3";

package netty;

option java_package = "netty.listen";
option java_outer_classname = "FileProto";
option java_multiple_files = true;

message FileStruct {
  FileType type = 1;
  FileEvent event = 2;
  string path = 3;
  bytes data = 4;
}

enum FileType {
  F = 0;
  D = 1;
  B = 2;
  C = 3;
  S = 4;
  P = 5;
  L = 6;
}

enum FileEvent {
  CREATE = 0;
  DELETE = 1;
  MODIFY = 2;
}